knock out the F/I_D case entirely

--- a/finite.tex
+++ b/finite.tex
@@ -923,7 +923,7 @@ Having accomplished all our major goals, we close our algebraic analysis of \(\m
 
 With our analysis of \(\moduli{fg}\) complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor \(\context{MU}(-)\).  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
 \begin{theorem}[{Landweber Exact Functor Theorem, \cite[Corollary 2.7]{LandweberHomologicalComodules}, \cite[Lecture 16]{LurieChromaticCourseNotes}, and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
-Let \(\sheaf F\) be a \index{sheaf!quasicoherent}quasicoherent sheaf over \(\moduli{fg} \times \Spec \Z_{(p)}\), thought of as a \index{comodule}comodule \(M\) for the Kudo--Araki Hopf algebroid (cf.\ \Cref{KudoArakiIsomorphism}) \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}^{\ptyp}}, \sheaf O_{\moduli{fgl}^{\ptyp}}[t_1, t_2, \ldots]).\]  If \((p, v_1, \ldots, v_d, \ldots)\) forms an infinite regular sequence on \(M\), then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}^{\ptyp}}} MUP_0(X)\] determines a homology theory on \emph{finite} spectra \(X\).  Moreover, if \(M/I_d = 0\) for some \(d \gg 0\), then this determines a homology theory on \emph{all} spectra \(X\).
+Let \(\sheaf F\) be a \index{sheaf!quasicoherent}quasicoherent sheaf over \(\moduli{fg} \times \Spec \Z_{(p)}\), thought of as a \index{comodule}comodule \(M\) for the Kudo--Araki Hopf algebroid (cf.\ \Cref{KudoArakiIsomorphism}) \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}^{\ptyp}}, \sheaf O_{\moduli{fgl}^{\ptyp}}[t_1, t_2, \ldots]).\]  If \((p, v_1, \ldots, v_d, \ldots)\) forms an infinite regular sequence on \(M\), then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}^{\ptyp}}} MUP_0(X)\] determines a homology theory.
 \label{LEFTRealTheoremWithProof}
 \end{theorem}
 \begin{proof}
@@ -950,7 +950,7 @@ Continuing in this fashion, for some \(D \gg 0\) we would like to show
 
 We begin with the first collection of conditions.  They are \emph{always} satisfied, but this requires an argument.  We write \(i_d\co \moduli{fg}^{= d} \to \moduli{fg}\) for the inclusion of the substack of formal groups of height exactly \(d\), which (following \Cref{OpenSubstacksOfMfg}) has a presentation by the Hopf algebroid \[(v_d^{-1} A / I_d, \Gamma \otimes v_d^{-1} A / I_d).\]  We are trying to study the derived functors of \[\sheaf N \mapsto (i_d{}_* i_d^* \sheaf F) \otimes \sheaf N \cong i_d{}_* (i_d^* \sheaf F \otimes i_d^* \sheaf N).\]  Since \(i_d{}_*\) is exact, we are moved to study the composite functor spectral sequence \[\CatOf{QCoh}_{\moduli{fg}} \xrightarrow{i_d^*} \CatOf{QCoh}_{\moduli{fg}^{=d}} \xrightarrow{i_d^* \sheaf F \otimes -} \CatOf{QCoh}_{\moduli{fg}^{=d}}.\]  The second functor is exact, independent of \(\sheaf F\): the geometric map \[\Gamma_d\co \Spec k \to \moduli{fg}^{=d}\] is a faithfully flat cover, and \(k\)--modules have no nontrivial \(\Tor\).  Meanwhile, the first functor has at most \(d\) derived functors: \(i_d^*\) is modeled by tensoring with \(v_d^{-1} A / I_d\), but \(A / I_d\) admits a Koszul resolution with \(d\) stages and the localization \(A / I_d \to v_d^{-1} A / I_d\) is flat.  As \(\Tor_{d+1}\) is beyond the length of this resolution, it is always zero.
 
-The second condition is dispatched in two cases, corresponding to the two auxiliary hypotheses and two conclusions in the Theorem statement.  In the first case, if \(\sheaf F\) itself satisfies \(\sheaf F / I_{D+1} = 0\), we are done.  In the second case, by assuming \(X\) to be a finite spectrum, we learn that \(\sheaf N\) is \emph{coherent}.  Writing \(j_{D+1}\co \moduli{fg}^{\ge D+1} \to \moduli{fg}\) for the inclusion of the prime closed substack, it follows from coherence and \Cref{LandwebersClassificationOfClosedSubstacks} that \(j_{D+1}^* \sheaf N\) is free for large \(D\), and hence \[\Tor_*^{\moduli{fg}^{\ge D+1}}( j_{D+1}^* \sheaf F, j_{D+1}^* \sheaf N) = 0.\]  We proceed by downward induction: for each \(d \le D\), Mayer--Vietoris shows
+To deal with the second condition,\footnote{It is common for authors to assume that \(\sheaf F\) itself satisfies \(\sheaf F / I_{D+1} = 0\), avoiding this part of the argument entirely.  There are, of course, flat sheaves without this property: \(\sheaf O(\moduli{fgl})\), for instance.} we make a slight reduction: a generic spectrum \(X\) can be written as an ind-finite spectrum, and as homology commutes with colimits, it suffices to treat the case that \(X\) is itself finite.  In this case, \(\sheaf N\) is \emph{coherent}.  Writing \(j_{D+1}\co \moduli{fg}^{\ge D+1} \to \moduli{fg}\) for the inclusion of the prime closed substack, it follows from coherence and \Cref{LandwebersClassificationOfClosedSubstacks} that \(j_{D+1}^* \sheaf N\) is free for large \(D\), and hence \[\Tor_*^{\moduli{fg}^{\ge D+1}}( j_{D+1}^* \sheaf F, j_{D+1}^* \sheaf N) = 0.\]  We proceed by downward induction: for each \(d \le D\), Mayer--Vietoris shows
 \[
 \left[\Tor^{\moduli{fg}^{\ge d+1}}_*(\sheaf F / I_{D+1}, j_{d+1}^* \sheaf N) = 0, \quad \quad \Tor^{\moduli{fg}^{= d}}_*(\sheaf F / I_{D+1}, v_d^{-1} j_d^* \sheaf N) = 0\right]
 \]\vspace{-\baselineskip}\[
