fix bad lecture boundary

--- a/sigma.tex
+++ b/sigma.tex
@@ -1223,7 +1223,7 @@ Using these ideas, we construct a cohomology theory \(H \sheaf O_{\h} P\), where
 In fact, this totalized map \(\Phi\) is a ghost of Ochanine and Witten's modular genus from \Cref{OchanineWittenTheorem}, as a bordism class in \(MU[6, \infty)_{2n}\) is, in particular, a bordism class in \(M\String_{2n}\).  However, they know more about this function than we can presently see: for instance, they claim that it has an integral \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansion.  In terms of the modular form, its \(q\)--expansion is given by building the Taylor expansion ``at \(\infty\)'' (using that unspoken decay condition).  In order to use our topological methods, it would be nice to have an elliptic spectrum embodying these \(q\)--expansions in the same way that \(H\h P\) embodied holomorphic functions, together with a comparison map that trades a modular form for its \(q\)--expansion.  The main ideas leading to such a spectrum come from considering the behavior of \(E_\Lambda\) as \(\tau\) tends to \(i \cdot \infty\).
 
 \begin{definition}
-Note that as \(\tau\) tends to \(i \cdot \infty\), the parameter \(q = \exp(2 \pi \mathrm i \tau)\) tends to \(0\).  In the multiplicative model of \Cref{SectionEllipticCurvesAndThetaFunctions}, we considered the punctured complex disk \(D'\) with its associated family of elliptic curves \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of \(C'\) over a particular point \(q \in D'\) is the curve \(\C^\times / q^{\Z}\). %  , and \(\theta\) determines a holomorphic function on the total space \(\C^\times \times D'\).
+Note that as \(\tau\) tends to \(i \cdot \infty\), the parameter \(q = \exp(2 \pi \mathrm i \tau)\) tends to \(0\).  In the multiplicative model of \(\moduli{ell} \times \Spec \C\), we considered the punctured complex disk \(D'\) with its associated family of elliptic curves \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of \(C'\) over a particular point \(q \in D'\) is the curve \(\C^\times / q^{\Z}\). %  , and \(\theta\) determines a holomorphic function on the total space \(\C^\times \times D'\).
 The Weierstrass equations give an embedding of \(C'_{\mathrm{an}}\) into \(D' \times \CP^2\) described by \[wy^2 + wxy = x^3 - 5 \alpha_3 w^2 x + -\frac{5 \alpha_3 + 7 \alpha_5}{12}w^3\] for certain functions \(\alpha_3\) and \(\alpha_5\) of \(q\).\footnote{Indeed, certain modular forms: \(\alpha_3\) has weight \(6\) and \(\alpha_5\) has weight \(10\).}  At \(q = 0\), this curve collapses to the twisted cubic \[wy^2 + wxy = x^3,\] and over the whole open unit disc \(D\) we call this extended family \(C_{\mathrm{an}}\).
 
 Now let \(A \subseteq \Z\ps{q}\) be the subring of power series which converge absolutely on the open unit disk.  It turns out that the coefficients of the Weierstrass cubic (i.e., \(5\alpha_3\) and \(\frac{1}{12}(5\alpha_3+7\alpha_5)\)) lie in \(A\), so it determines a generalized elliptic curve \(C\) over \(\Spec A\), and \(C_{\mathrm{an}}\) is the curve given by base-change from \(A\) to the ring of holomorphic functions on \(D\)~\cite[Section 5]{MoravaFormsOfKthy}.  The \index{elliptic curve!Tate curve}\textit{Tate curve} is the intermediate family \(C_{\Tate}\) over the intermediate base \(D_{\Tate} = \Spec \Z\ps{q}\), as base-changed from \(A\).
