remove the 'alpha's from ~5.5.19

--- a/sigma.tex
+++ b/sigma.tex
@@ -1224,12 +1224,12 @@ In fact, this totalized map \(\Phi\) is a ghost of Ochanine and Witten's modular
 
 \begin{definition}
 Note that as \(\tau\) tends to \(i \cdot \infty\), the parameter \(q = \exp(2 \pi \mathrm i \tau)\) tends to \(0\).  In the multiplicative model of \(\moduli{ell} \times \Spec \C\), we considered the punctured complex disk \(D'\) with its associated family of elliptic curves \[C'_{\mathrm{an}} = \C^\times \times D' / (u, q) \sim (qu, q).\]  The fiber of \(C'\) over a particular point \(q \in D'\) is the curve \(\C^\times / q^{\Z}\). %  , and \(\theta\) determines a holomorphic function on the total space \(\C^\times \times D'\).
-The Weierstrass equations give an embedding of \(C'_{\mathrm{an}}\) into \(D' \times \CP^2\) described by \[wy^2 + wxy = x^3 - 5 \alpha_3 w^2 x + -\frac{5 \alpha_3 + 7 \alpha_5}{12}w^3\] for certain functions \(\alpha_3\) and \(\alpha_5\) of \(q\).\footnote{Indeed, certain modular forms: \(\alpha_3\) has weight \(6\) and \(\alpha_5\) has weight \(10\).}  At \(q = 0\), this curve collapses to the twisted cubic \[wy^2 + wxy = x^3,\] and over the whole open unit disc \(D\) we call this extended family \(C_{\mathrm{an}}\).
+The Weierstrass equations give an embedding of \(C'_{\mathrm{an}}\) into \(D' \times \CP^2\) described by \[y^2 w + x y w = x^3 + a_4 x w^2 + a_6 w^3\] for certain modular forms \(a_4\) and \(a_6\), thought of as functions of \(q\).\footnote{The inquisitive reader can find expressions for \(a_4\) and \(a_6\) in terms of \(G_4\) and \(G_6\), as well as a more serious discussion of a Tate curve generally, in Silverman's text~\cite[Section VI.1]{SilvermanAdvanced}.}  At \(q = 0\), this curve collapses to the twisted cubic \[y^2 w + x y w = x^3,\] and over the whole open unit disc \(D\) we call this extended family \(C_{\mathrm{an}}\).
 
-Now let \(A \subseteq \Z\ps{q}\) be the subring of power series which converge absolutely on the open unit disk.  It turns out that the coefficients of the Weierstrass cubic (i.e., \(5\alpha_3\) and \(\frac{1}{12}(5\alpha_3+7\alpha_5)\)) lie in \(A\), so it determines a generalized elliptic curve \(C\) over \(\Spec A\), and \(C_{\mathrm{an}}\) is the curve given by base-change from \(A\) to the ring of holomorphic functions on \(D\)~\cite[Section 5]{MoravaFormsOfKthy}.  The \index{elliptic curve!Tate curve}\textit{Tate curve} is the intermediate family \(C_{\Tate}\) over the intermediate base \(D_{\Tate} = \Spec \Z\ps{q}\), as base-changed from \(A\).
+Now let \(A \subseteq \Z\ps{q}\) be the subring of power series which converge absolutely on the open unit disk.  It turns out that the coefficients of the Weierstrass cubic lie in \(A\), so it determines a generalized elliptic curve \(C\) over \(\Spec A\), and \(C_{\mathrm{an}}\) is the curve given by base-change from \(A\) to the ring of holomorphic functions on \(D\)~\cite[Section 5]{MoravaFormsOfKthy}.  The \index{elliptic curve!Tate curve}\textit{Tate curve} is the intermediate family \(C_{\Tate}\) over the intermediate base \(D_{\Tate} = \Spec \Z\ps{q}\), as base-changed from \(A\).
 \end{definition}
 
-The singular fiber at \(q = 0\) prompts us to enlarge our notion of elliptic curve slightly.
+The singular fiber at \(q = 0\) prompts us to enlarge our notion of elliptic curve.
 
 \begin{definition}[{\cite[Definitions B.1-2]{AHSTheoremOfTheCube}}]
 A \index{elliptic curve!Weierstrass curve}\textit{Weierstrass curve} is \emph{any} curve of the form \[C(a_1, a_2, a_3, a_4, a_6) := \left\{ [x : y : w] \in \mathbb P^2 \middle| \begin{array}{c} y^2 w + a_1 xyw + a_3 yw^2 = \\ x^3 + a_2 x^2 w + a_4 x w^2 + a_6 w^3 \end{array} \right\}.\]  A \index{elliptic curve!generalized}\textit{generalized elliptic curve} over \(S\) is a scheme \(C\) equipped with maps \[S \xrightarrow{0} C \xrightarrow{\pi} S\] such that \(C\) is Zariski--locally isomorphic to a system of Weierstrass curves (in a way preserving \(0\) and \(\pi\)).\footnote{An elliptic curve in the usual sense turns out to be a generalized elliptic curve which is smooth, i.e., the discriminant of the Weierstrass equations is a unit.}\footnote{Unfortunately, ``generalized elliptic curve'' already means something in number theory, but Ando, Hopkins, and Strickland reused this phrase for this definition in their published article.  In a number theorist's language, these are ``stable curves of genus \(1\) with specified section in the smooth locus''.  No adjective other than ``generalized'' seems to be much better: singular, for instance, evokes the right idea but is also already taken.}
