pretty up sprang-naumann too

--- a/main.bib
+++ b/main.bib
@@ -3596,13 +3596,18 @@ MRREVIEWER = {Jin Kun Lin},
 MRREVIEWER = {A. H. Clark},
 }
 
-@article{SprangNaumann,
-  author = {Sprang, Johannes and Naumann, Niko},
-  title = {$p$--adic Interpolation and Multiplicative Orientations of $KO$ and $TMF$},
-  archivePrefix = "arXiv",
-  eprint = {1409.5314},
-  primaryClass = "math.AT",
-  year = {2014}
+@ARTICLE{SprangNaumann,
+   author = {{Sprang}, J. and {Naumann}, N.},
+    title = "{p-adic interpolation and multiplicative orientations of KO and tmf (with an appendix by Niko Naumann)}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1409.5314},
+ primaryClass = "math.AT",
+ keywords = {Mathematics - Algebraic Topology, 55P42, 55P43},
+     year = 2014,
+    month = sep,
+   adsurl = {http://adsabs.harvard.edu/abs/2014arXiv1409.5314S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @misc{stacks-project,
