bold B and C on pg 338

--- a/powerops.tex
+++ b/powerops.tex
@@ -955,7 +955,7 @@ execute at end picture={
         (glS) -- (Cj) -- (glKOp) -- cycle;
     \node[fill=white, fill opacity=0.33, text opacity=1] (A) at ([shift={(225:0.75)}]Cj) {\scriptsize \(A\)};
 }]
-\spin \arrow{r}[description]{j} \arrow{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow{d}[description]{B} \arrow{r} & b\spin \arrow{r} \arrow{rd} \arrow[densely dotted]{d}[description]{C}& b\gl_1 \S \arrow{d} \\
+\spin \arrow{r}[description]{j} \arrow{rd} & |[alias=glS]| \gl_1 \S \arrow{r} \arrow{d} \arrow{rd}[description]{\gl_1 \eta_{KO_p}} & |[alias=Cj]| Cj \arrow[very thick]{d}[description]{B} \arrow{r} & b\spin \arrow{r} \arrow{rd} \arrow[very thick]{d}[description]{C}& b\gl_1 \S \arrow{d} \\
 & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{r} & |[alias=glKOp]| \gl_1 KO_p \arrow{r} & \Q \otimes \gl_1 KO_p \arrow{r} & \Q/\Z \otimes \gl_1 KO_p,
 \end{tikzcd}
 \end{center}
