fix ugly equals tikzcd arrows

--- a/finite.tex
+++ b/finite.tex
@@ -387,7 +387,7 @@ We now show that the following conditions are equivalent:
 To verify that Claims 1 and 2 are equivalent, note first that \Cref{TwoNBudsDifferByACocycle} shows that the set of \(n\)--buds in Claim 2 is a torsor for the group of such polynomials in Claim 1, and hence Claims 1 and 2 are a simultaneous assertion about the precise form of the structure group for that torsor.  The equivalence of Claims 2 and 3 amounts to our moduli-theoretic interpretation of formal group laws on rings formed by square-zero extensions: a group map \[(Q\mathcal O_{\moduli{fgl}})_{2n} \to A\] is equivalent data to a ring map \[\mathcal O_{\moduli{fgl}} \to Z \oplus A\] with the prescribed behavior on \((Q\mathcal O_{\moduli{fgl}})_{2n}\) and which sends all other indecomposables to \(0\).  Finally, Claim 4 is the universal case of Claim 3, using the projection map \(\sheaf O_{\moduli{fgl}} \to (Q \sheaf O_{\moduli{fgl}})_{2n}\).  Applying Claim 3 to this map yields a diagram
 \begin{center}
 \begin{tikzcd}
-\sheaf O_{\moduli{fgl}} \arrow{r} \arrow[equals]{rrd} & L \arrow[crossing over]{d} \\
+\sheaf O_{\moduli{fgl}} \arrow{r} \arrow[equal]{rrd} & L \arrow[crossing over]{d} \\
 & \Z \oplus T_{2n} \arrow[densely dotted]{r} & \Z \oplus (\sheaf O_{\moduli{fgl}})_{2n}.
 \end{tikzcd}
 \end{center}
@@ -1266,7 +1266,7 @@ After a nontrivial reduction argument, this comes down to an identical fact: the
 Any coconnective spectrum can be expressed as the colimit of its truncations
 \begin{center}
 \begin{tikzcd}[column sep=1em]
-E[n, n] \arrow{r} \arrow[equals]{d} & E[n-1, n] \arrow{r} \arrow{d} & E[n-2, n] \arrow{d} \arrow{r} & \cdots \arrow["\colim"]{r} & E(-\infty, n] \\
+E[n, n] \arrow{r} \arrow[equal]{d} & E[n-1, n] \arrow{r} \arrow{d} & E[n-2, n] \arrow{d} \arrow{r} & \cdots \arrow["\colim"]{r} & E(-\infty, n] \\
 \Susp^n H\pi_nE & \Susp^{n-1} H\pi_{n-1} E & \Susp^{n-2} H\pi_{n-2} E & \cdots.
 \end{tikzcd}
 \end{center}
