--- a/quillen.tex
+++ b/quillen.tex
@@ -736,7 +736,7 @@ The Tate spectrum is quite a destructive operation in the case of \(G = C_p\).\f
 \begin{center}
 \begin{tikzcd}
 (X^{\vee C_p})_{hC_p} \arrow{r} & (X^{\vee C_p})^{hC_p} \arrow{r} & X^{\vee C_p} \arrow{r} & (X^{\vee C_p})_{hC_p} \\
-X \arrow[equals]{u} \arrow{r} & X \arrow[equals]{u} \arrow["\Delta"]{r} & X^{\vee C_p} \arrow[equals]{u} \arrow["\mu"]{r} & X \arrow[equals]{u},
+X \arrow[equal]{u} \arrow{r} & X \arrow[equal]{u} \arrow["\Delta"]{r} & X^{\vee C_p} \arrow[equal]{u} \arrow["\mu"]{r} & X \arrow[equal]{u},
 \end{tikzcd}
 \end{center}
 where on the bottom row we have identified the homotopy orbits and fixed points of the wedge.  We claim that the norm map is an equivalence.  This diagram is natural in \(X\) and each node preserves cofiber sequences, so it suffices to check the claim the spheres \(\S^n\).  Recalling that the long horizontal composite is multiplication by \(|C_p| = p\), we have factored \(p \in \pi_0 \End \S^n = \Z\) as some map followed by the diagonal and fold maps, which themselves compose to \(p\).  This forces the norm map itself to be an equivalence, and hence the cofiber sequence \[(X^{\vee C_p})_{hC_p} \xrightarrow{\simeq} (X^{\vee C_p})^{hC_p} \to (X^{\vee C_p})^{tC_p}\] causes \((X^{\vee C_p})^{tC_p}\) to be contractible.
