--- a/sigma.tex
+++ b/sigma.tex
@@ -936,8 +936,8 @@ There is a second standard embedding of a complex elliptic curve into projective
 
     \fill (0:2) circle (0.12) ++(0.26,0.26) node {\(1\)};
     \fill (60:1) circle (0.12) ++(0,-0.32) node {\(q\)};
-    \fill[opacity=0.5] (2,-3.464) circle (0.12) ++(-0.26,0.26) node {\(q^{-1}\)};
-    \fill[opacity=0.5] (-0.433,0.25) circle (0.12) ++(-0.28,0) node {\(q^2\)};
+    \fill[opacity=0.5] (-60:4) circle (0.12) ++(-0.26,0.26) node {\(q^{-1}\)};
+    \fill[opacity=0.5] (120:0.5) circle (0.12) ++(-0.28,0) node {\(q^2\)};
     \path [draw=none, fill=red, even odd rule, fill opacity = 0.1] (0,0) circle (2) (0,0) circle (1);
     \path [draw=none, fill=black, even odd rule, fill opacity = 0.1] (0,0) circle (1) (0,0) circle (0.5);
     \path [draw=none, fill=black, even odd rule, fill opacity = 0.1] (0,0) circle (4) (0,0) circle (2);
