fix bad chi definition

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -313,7 +313,7 @@ a[b] \ast a'[b'] & = (a \ast a') [b + b'], \\
 A_{R[S]}[B] \otimes_R A_{R[S]}[B] & \xrightarrow{\circ} A_{R[S]}[B] &
 a[b] \circ a'[b'] & = (a \circ a') [b b'], \\
 A_{R[S]}[B] & \xrightarrow{\chi} A_{R[S]}[B] &
-\chi(a[b]) & = (\chi a)[b] = a[-b], \\
+\chi(a[b]) & = a[-b], \\
 A_{R[S]}[B] & \xrightarrow{\Delta} A_{R[S]}[B] &
 \Delta(a[b]) & = \sum_j (a'_j[b] \otimes a''_j[b]),
 \end{align*}
