add todd genus footnote to 3.1.21

--- a/finite.tex
+++ b/finite.tex
@@ -119,7 +119,7 @@ The following Theorem is the culmination of a typical first investigation of des
 If \(f\co R \to S\) is \index{descent!faithfully flat}faithfully flat, the natural assignments
 \begin{center}
 \begin{tikzcd}
-\CatOf{QCoh}(\Spec R) \arrow[bend left,"c^*"]{r} & \CatOf{QCoh}(\mathcal D_f) \arrow[bend left,"\lim"]{l}
+\CatOf{QCoh}(\Spec R) \arrow[shift left=0.3\baselineskip,"c^*"]{r} & \CatOf{QCoh}(\mathcal D_f) \arrow[shift left=0.3\baselineskip,"\lim"]{l}
 \end{tikzcd}
 \end{center}
 form an equivalence of categories.
@@ -186,9 +186,9 @@ An even-periodic ring spectrum \(E\) satisfies \index{commutativity hypothesis@c
 \begin{definition}[\textbf Flatness \textbf Hypothesis]
 An even-periodic ring spectrum \(E\) satisfies \index{flatness hypothesis@flatness hypothesis, \FH}{\FH} when the right-unit map \(E_0 \to E_0 E\) is flat.\footnote{If \(E\) is a commutative ring spectrum, then this is equivalent to asking that the left-unit map is a flat map of \(E_0\)--modules.}  In this case, the Segal map \[(E_0 E)^{\otimes_{E_0} j} \otimes_{E_0} E_0 X \to \pi_0(E^{\sm (j+1)} \sm X) = \pi_0 \mathcal D_E(X)[j]\] is an isomorphism for all \(X\).  In geometric language, this says that \(\context{E}\) is valued in simplicial sets equivalent to nerves of groupoids and that \[\context{E}(X) := \widetilde{\pi_0 \mathcal D_E(X)}\] forms a Cartesian quasicoherent sheaf over \(\context{E}\).  In this sense, we have constructed a factorization
 \begin{center}
-\begin{tikzcd}
-\CatOf{Spectra} \arrow["E_0(-)"]{rr} \arrow["\context{E}(-)"]{rd} & & \CatOf{Modules}_{E_0} \\
-& \CatOf{QCoh}(\context{E}) \arrow["{(-)[0]}"]{ru} .
+\begin{tikzcd}[row sep=1.2em]
+\CatOf{Spectra} \arrow["E_0(-)"]{rr} \arrow["\context{E}(-)"']{rd} & & \CatOf{Modules}_{E_0} \\
+& \CatOf{QCoh}(\context{E}) \arrow["{(-)[0]}"']{ru} .
 \end{tikzcd}
 \end{center}
 \end{definition}
@@ -255,7 +255,7 @@ The context for \(MOP\), by contrast, is reasonably simple.  \Cref{CalculationOf
 \end{example}
 
 \begin{remark}\label{MUstarVsMUAsModuli}
-The algebraic moduli \(\context{MU} = (\Spec MU_*, \Spec MU_* MU)\) and the topological moduli \((MU, MU \sm MU)\) are quite different.  An orientation \(MU \to E\) selects a coordinate on the formal group \(\CP^\infty_E\), but \(\CP^\infty_E\) itself exists independently of the orientation.  Hence, while \(\context{MU}(E_*)\) can have many connected components corresponding to \emph{distinct formal groups} on the coefficient ring \(E_*\), the groupoid \(\CatOf{RingSpectra}(\sheaf D_{MU}, E)\) has only \emph{one} connected component corresponding to the formal group \(\CP^\infty_E\) intrinsic to \(E\).\footnote{The reader ought to compare this with the situation in explicit local class field theory, where a local number field has a preferred formal group attached to it.}\footnote{The precocious student might ask what functor \(MU\) represents as an \(E_\infty\)--ring spectrum.  To date, this functor has not been algebraically recognized.}
+The algebraic moduli \(\context{MU} = (\Spec MU_*, \Spec MU_* MU)\) and the topological moduli \((MU, MU \sm MU)\) are quite different.  An orientation \(MU \to E\) selects a coordinate on the formal group \(\CP^\infty_E\), but \(\CP^\infty_E\) itself exists independently of the orientation.  Hence, while \(\context{MU}(E_*)\) can have many connected components corresponding to \emph{distinct formal groups} on the coefficient ring \(E_*\), the groupoid \(\CatOf{RingSpectra}(\sheaf D_{MU}, E)\) has only \emph{one} connected component corresponding to the formal group \(\CP^\infty_E\) intrinsic to \(E\).\footnote{In \Cref{HeightOfGmExample}, we will show that \(\G_a\) and \(\G_m\) are not isomorphic over \(\Spec \Z\).  It follows that the ``Todd genus'', which is the map \(MUP_0 \to KU_0 \cong \Z\) induced by \Cref{CPinftyKUExample}, \emph{requires} \(KU\) as its target and \emph{cannot} be realized by a map \(MUP \to H\Z\).  Rationally, however, there is an isomorphism \(\Q \otimes KU \cong \Q \otimes H\Z P\), and the resulting relation between the Todd genus and the trivial genus is known as the \textit{Chern character}.}\footnote{The reader ought to compare this with the situation in explicit local class field theory, where a local number field has a preferred formal group attached to it.}\footnote{The precocious student might ask what functor \(MU\) represents as an \(E_\infty\)--ring spectrum.  To date, this functor has not been algebraically recognized.}
 \end{remark}
 
 \begin{remark}[{\cite[{pg.\ 5}]{HopkinsFromSpectraToStacks}}]\label{StackinessMeasuresNonorientability}
