fix ugly {}_0 vs pi_0

--- a/finite.tex
+++ b/finite.tex
@@ -1312,7 +1312,7 @@ E_2^{*, *} = H^*((\moduli{fg})^\wedge_{\Gamma_d}; \omega^{\otimes *}) \Rightarro
 \end{theorem}
 
 \begin{remark}[{\cite[Section 24]{StricklandFPFP}, \cite{DevinatzHopkins}}]\label{StablizerRepIsComplicated}
-As a matter of emphasis, this Theorem does not give any description of the \(\Aut \Gamma_d\)--\emph{representation} structure of \(E_d{}_0\), which is very complicated (cf.\ \Cref{ThePeriodMapSection}).  Here are some basic facts about it:
+As a matter of emphasis, this Theorem does not give any description of the \(\Aut \Gamma_d\)--\emph{representation} structure of \(\pi_* E_d\), which is very complicated (cf.\ \Cref{ThePeriodMapSection}).  Here are some basic facts about it:
 \begin{itemize}
     \item The center of \(\Aut \Gamma_d\) is given by \(\Z_p^\times\), which is the subgroup consisting of the multiplication--by--\(n\) maps.  This subgroup acts trivially on the deformation space.
     \item More generally, one can show that the action of \(\W_p(k)\) extends this action.  It is the stabilizer of the \index{Lubin Tate stack@Lubin--Tate stack!canonical lift}\textit{canonical lift}, which is the \(\W_p(k)\)--point of Lubin--Tate space given by sending the generators \(v_j\) to zero, \(j \ge 1\).
