--- a/cooperations.tex
+++ b/cooperations.tex
@@ -413,7 +413,7 @@ Finally, we are able to explain the phenomenon uncovered by computation in \Cref
 	\item How does this functor interact with classical rings?
 \end{enumerate}
 
-Towards the second, we have already described an interesting bifunctorial embedding of \(\CatOf{Rings}\) into \(\CatOf{HopfRings}\), \(S \mapsto R[S]\), analogous to the group-ring construction embedding groups into Hopf algebras.  We can describe the arithmetic in its ring of \(\ast\)--indecomposables:
+Towards the second, we have already described an interesting bifunctorial embedding \((R, S) \mapsto R[S]\) analogous to the group-ring construction embedding groups into Hopf algebras.  THe following observation describes the arithmetic in its ring of \(\ast\)--indecomposables:
 
 \begin{lemma}\label{ArithmeticInQAst}
 For \(H\) a Hopf ring and \(x \in H\), write \(\<x\> = x - \eps(x) \cdot [0]\) for the corresponding element of \(\ker \eps\).  In the \(\ast\)--indecomposable quotient, there are the formulas
