remove bad colon

--- a/sigma.tex
+++ b/sigma.tex
@@ -858,7 +858,7 @@ s \in \Theta^2 \sheaf I(0) & \mapsto \frac{\mu_{12}^* s}{\mu_1^* s \otimes \mu_2
 \end{lemma}
 
 \begin{remark}
-The rational conclusion of this analysis admits a very mild reformulation: there is always a natural \(MU[6, \infty)\)--orientation of a rational spectrum \(E\) given by the composite \[MU[6, \infty) \to MU[6, \infty) \otimes \Q \to H\Q = \S \otimes \Q \xrightarrow{\eta_E} E \otimes \Q = E.\]  This canonical point turns the \(C^3(\CP^\infty_E; \Gm)\)--torsor structure of \(C^3(\CP^\infty_E; \sheaf I(0))\) into an isomorphism \(C^3(\CP^\infty_E; \sheaf I(0)) \cong C^3(\CP^\infty_E; \Gm)\).  In sum, an arbitrary \(MU[6, \infty)\)--orientation of \(E\) is witnessed by a symmetric rigid trivariate power series satisfying \(kU^0\)--linearity, called its \index{characteristic series}\textit{characteristic series}.  There are similar theories of characteristic series for rational orientations by \(M\SU\), \(MU\), and \(MUP\); in the latter two cases this recovers the \index{characteristic series!Hirzebruch series}\textit{Hirzebruch series}, which associates to an orientation \(\phi\co MUP \to \Q \otimes E\) the difference of trivializations \(x / \exp_\phi(x)\).  Conversely, any such series gives rise to a characteristic class by the formula \[K_\phi(\L_1 \oplus \cdots \oplus \L_n) = \prod_{j=1}^n \frac{c_1(\L_j)}{\exp_\phi(c_1(\L_j))},\] where \(c_1\) is the first Chern class associated to the canonical rational orientation.
+The rational conclusion of this analysis admits a very mild reformulation.  Note first that there is always a natural \(MU[6, \infty)\)--orientation of a rational spectrum \(E\) given by the composite \[MU[6, \infty) \to MU[6, \infty) \otimes \Q \to H\Q = \S \otimes \Q \xrightarrow{\eta_E} E \otimes \Q = E.\]  This canonical point turns the \(C^3(\CP^\infty_E; \Gm)\)--torsor structure of \(C^3(\CP^\infty_E; \sheaf I(0))\) into an isomorphism \(C^3(\CP^\infty_E; \sheaf I(0)) \cong C^3(\CP^\infty_E; \Gm)\).  In sum, an arbitrary \(MU[6, \infty)\)--orientation of \(E\) is witnessed by a symmetric rigid trivariate power series satisfying \(kU^0\)--linearity, called its \index{characteristic series}\textit{characteristic series}.  There are similar theories of characteristic series for rational orientations by \(M\SU\), \(MU\), and \(MUP\); in the latter two cases this recovers the \index{characteristic series!Hirzebruch series}\textit{Hirzebruch series}, which associates to an orientation \(\phi\co MUP \to \Q \otimes E\) the difference of trivializations \(x / \exp_\phi(x)\).  Conversely, any such series gives rise to a characteristic class by the formula \[K_\phi(\L_1 \oplus \cdots \oplus \L_n) = \prod_{j=1}^n \frac{c_1(\L_j)}{\exp_\phi(c_1(\L_j))},\] where \(c_1\) is the first Chern class associated to the canonical rational orientation.
 \end{remark}
 
 Our second task is to analyze the cohomology formal scheme associated to \(BU[6, \infty)\), and we begin with the choice \(E = H\).
