--- a/sigma.tex
+++ b/sigma.tex
@@ -867,7 +867,7 @@ Our second task is to analyze the cohomology formal scheme associated to \(BU[6,
 \(DC^k(\G_a; \Gm)\) are all formal varieties for \(k \le 3\).
 \end{lemma}
 \begin{proof}
-We know that \(\sheaf O C^k(\G_a; \Gm)\) are all free \(\Z\)--modules of graded finite rank in the range \(k \le 3\), so we may write \[\sheaf O(D C^k(\G_a; \Gm)) \cong (\sheaf O C^k(\G_a; \Gm))^*.\]  Our task is to show that this Hopf algebra \(\sheaf O(C^k(\G_a; \Gm))^*\) is a power series ring.
+We know that \(\sheaf O C^k(\G_a; \Gm)\) are all free \(\Z\)--modules of graded finite rank in the range \(k \le 3\), so we may write \[\sheaf O(D C^k(\G_a; \Gm)) \cong (\sheaf O C^k(\G_a; \Gm))^*.\]  We must show that this Hopf algebra \(\sheaf O(C^k(\G_a; \Gm))^*\) is a power series ring.
 
 Specialize, for the moment, to the case of \(k = 2\).  It will suffice to show that it is a power series ring modulo \(p\) for every prime \(p\).  Such graded connected finite-type Hopf algebras over \(\F_p\) were classified by Borel (and exposited by \index{Milnor--Moore}Milnor--Moore~\cite[Theorem 7.11]{MilnorMoore}) as either polynomial or truncated polynomial.  These two cases are distinguished by the \index{Frobenius}\textit{Frobenius} operation: the Frobenius on a polynomial ring is injective, whereas the Frobenius on a truncated polynomial ring is not.  It is therefore equivalent to show that the \index{Verschiebung}\emph{Verschiebung} on the original ring \(\sheaf O(C^2(\G_a; \Gm)) \otimes \F_p\) is \emph{surjective}.  Recalling the calculation \(c_n^p = c_{np}\) at the level of bivariate \(2\)--cocycles, we compute \[p^* a_n = a_{np}^p,\] and since \(F a_{np} = a_{np}^p\) and \(FV = p^*\), we learn \[V(a_{np}) = a_n.\]  Essentially the same proof handles the cases \(k = 1\) and \(k = 0\).
 
