clean up language around 5.5.14

--- a/sigma.tex
+++ b/sigma.tex
@@ -1171,11 +1171,11 @@ In the case that \(A\) is an elliptic curve, this agrees with the usual definiti
 We now actually leverage this arithmetic geometry by placing ourselves in a situation where algebraic topology is directly linked to abelian varieties.
 
 \begin{definition}\label{DefnEllipticSpectrum}
-An \index{elliptic spectrum}\textit{elliptic spectrum} consists of a even--periodic ring spectrum \(E\), a (generalized) elliptic curve \(C\) over \(\Spec E_0\), and a fixed isomorphism \[\phi\co C^\wedge_0 \xrightarrow{\cong} \CP^\infty_E.\]  A map among such spectra consists of a map of ring spectra \(f\co E \to E'\) together with a specified isomorphism of elliptic curves \(\psi\co f^* C \to C'\).\footnote{Elliptic curves and cohomology theories can be brought much closer together still, as in Lurie's framework~\cite[Sections 4 and 5.3]{LurieSurveyOfEll}.}
+An \index{elliptic spectrum}\textit{elliptic spectrum} consists of a even--periodic ring spectrum \(E\), an elliptic curve \(C\) over \(\Spec E_0\), and a choice of isomorphism \[\phi\co C^\wedge_0 \xrightarrow{\cong} \CP^\infty_E.\]  A map of elliptic spectra consists of a map of ring spectra \(f\co E \to E'\) and an isomorphism of elliptic curves \(\psi\co f^* C \to C'\) compatible with \(\phi_E\) and \(\phi_{E'}\).\footnote{Elliptic curves and cohomology theories can be brought much closer together still, as in Lurie's framework~\cite[Sections 4 and 5.3]{LurieSurveyOfEll}.}
 \end{definition}
 
 \begin{remark}
-Our preference for \emph{isomorphisms} of elliptic curves rather than general homomorphisms is prompted by our study of stable operations: we have seen that a stable operation between complex-oriented ring spectra can only ever give rise to an isomorphism of formal group laws (incorporating a suitable base change).  More broadly, we have also found that the collection of possible isomorphisms of formal group laws organizes into the \index{context!stable}\textit{stable context}, a very important object in our study.  In \Cref{PowerOpnsChapter}, we will develop a theory (with an attendant notion of context) which incorporates \index{isogeny}\textit{isogenies} of elliptic curves in addition to isomorphisms.
+Our preference for \emph{isomorphisms} of elliptic curves rather than general homomorphisms is prompted by our study of stable operations: we have seen that a morphism of complex-orientable ring spectra always gives rise to an isomorphism (after base-change) of their associated formal groups.  In \Cref{PowerOpnsChapter}, we will develop a topological setting (with an attendant notion of context) which incorporates \index{isogeny}\textit{isogenies} of elliptic curves in addition to isomorphisms.
 \end{remark}
 
 Coupling \Cref{DefnEllipticSpectrum} to \Cref{BU6Triumvirate} and \Cref{Theta3IsTrivial}, we conclude the following:
