--- a/sigma.tex
+++ b/sigma.tex
@@ -1289,7 +1289,7 @@ Witten defines his characteristic series for \emph{oriented} manifolds by the fo
 K_{\mathrm{Witten}}(x) & = \exp\left( \sum_{k=2}^\infty 2 G_{2k}(\tau) \cdot \frac{x^{2k}}{(2k)!} \right) \\
 & = \frac{x/2}{\sinh(x/2)} \cdot \left(\prod_{n=1}^\infty \frac{(1 - q^n)^2}{(1 - q^n u)(1 - q^n u^{-1})}\right) \cdot \mathrm e^{-G_2(\tau) x^2},
 \end{align*}
-where \(G_{2k}\) is the \(2k\){\th} Eisenstein series.  Noting that \(G_2\) is \emph{not} a modular form, the condition that \(p_1(M) / 2\) vanish is precisely the condition that \(G_2\) contribute nothing to the sum, so that the remainder \emph{is} a modular form.
+where \(G_{2k}\) is the \((2k)\){\th} Eisenstein series.  Noting that \(G_2\) is \emph{not} a modular form, the condition that \(p_1(M) / 2\) vanish is precisely the condition that \(G_2\) contribute nothing to the sum, so that the remainder \emph{is} a modular form.
 \end{remark}
 
 \begin{remark}[{\cite{AndoMorava}}]
