--- a/powerops.tex
+++ b/powerops.tex
@@ -861,7 +861,7 @@ hence \(\EinftyRings(MG, R)\) appears as the fiber at \(\gl_1 \eta_R\) of the re
 There exist \(E_\infty\) maps \(Mj \to R\) if and only if \(\gl_1 \eta_R \circ j\) is null-homotopic.  If this is the case, then the set \[\EinftyRings(Mj, R)\] is a torsor for \([\Susp g, \gl_1 R]\). \qed
 \end{corollary}
 
-Ando, Hopkins, and Rezk have used this presentation to understand the mapping space \(\EinftyRings(M\String, \tmf)\).  In this Lecture, we will use this same technology to understand the mapping space \[\EinftyRings(M\Spin, KO_{(p)}),\] which proceeds along entirely similar lines but is a \emph{considerably} simpler computation.\footnote{Ando, Hopkins, and Rezk also do \(\EinftyRings(M\Spin, KO)\) as a warm-up computation~\cite[Section 7]{AHR}, and we are further \(p\)--localizing that result so as not to have to think about arithmetic fracture.  Working arithmetically globally should be an easy exercise for the reader.}  The approach to this computation is to mix the presentation above with \index{chromatic localization!fracture}chromatic fracture applied to the target:
+Ando, Hopkins, and Rezk~\cite{AHR} have used this presentation to understand the mapping space \(\EinftyRings(M\String, \tmf)\).  In this Lecture, we will use this same technology to understand the mapping space \[\EinftyRings(M\Spin, KO_{(p)}),\] which proceeds along entirely similar lines but is a \emph{considerably} simpler computation.\footnote{Ando, Hopkins, and Rezk also do \(\EinftyRings(M\Spin, KO)\) as a warm-up computation~\cite[Section 7]{AHR}, and we are further \(p\)--localizing that result so as not to have to think about arithmetic fracture.  Working arithmetically globally should be an easy exercise for the reader.}  The approach to this computation is to mix the presentation above with \index{chromatic localization!fracture}chromatic fracture applied to the target:
 \begin{center}
 \begin{tikzcd}
 M\Spin \arrow[densely dotted]{r} \arrow[bend left=15]{rr} \arrow{rrd} \arrow{rd} & KO_{(p)} \arrow{r} \arrow[crossing over]{d} \arrow[rd, phantom, "\lrcorner", very near start] & KO_p \arrow{d} \\
@@ -1096,7 +1096,7 @@ An interesting feature of the Lemma is the auxiliary index \(N\), which is \emph
 With this computation in hand, the spectrum of \(p\)--local cooperations \(KU_{(p)} \sm KU_{(p)}\) can be recovered from arithmetic fracture, as can the global operations \(KU \sm KU\).  The answer is quite similar: \(\pi_0 KU \sm KU\) is populated by rational polynomials which evaluate to integers on all integer inputs, called \index{numerical polynomials}\textit{numerical polynomials}.
 \end{remark}
 
-We now pass from \(KU\) to \(KO\).  To begin, use the \index{Tate vanishing}Tate trick
+To pass from \(KU\) to \(KO\), we begin with the \index{Tate vanishing}Tate trick~\cite{ClausenMathew,GreenleesSadofsky,HoveySadofsky}:
 \begin{align*}
 KU \sm KO & \simeq KU \sm (K^{hC_2}) \tag{\(KO\) is a homotopy fixed point spectrum} \\
 & \simeq KU \sm (KU_{hC_2}) \tag{Tate objects vanish \(K(1)\)--locally} \\
@@ -1115,7 +1115,7 @@ where the isomorphism is given by sending an operation $f\co KO \to KO$ to the K
 
 Having learned enough about \(KO\)--operations to justify the program enacted in the previous subsections, we now need to show that there exist sequences of \(p\)--adic integers satisfying those criteria.
 
-\begin{theorem}[Mazur]
+\begin{theorem}[{\cite{Mazur}}]
 For any auxiliary \(c \in \Z_p^\times\), there is a functional \(f_c\) satisfying\footnote{\[\text{Explicitly,\;} f_c(h) = \int_{\Z_p^\times} h(x) \mathrm d\mu_c = \lim_{r \to \infty} \frac{1}{p^r} \sum_{\substack{0 \le i < p^r \\ p \nmid i}} \int_i^{ci} \frac{h(t)}{t} \mathrm dt.\]  It also satisfies the normalizing property \(\int_{\Z_p^\times} \mathrm d\mu_c = \frac{1}{p} \log(c^{p-1})\).}\footnote{With considerable effort, this output can be halved~\cite[Section 10.3]{AHR}.} \[f_c(x^{k \ge 1}) = \frac{-B_k}{k}(1 - p^{k-1})(1 - c^k).  \pushQED\qed \qedhere \popQED\]
 \end{theorem}
 
