fix beta divisibilities in anss2

--- a/anss2.tex
+++ b/anss2.tex
@@ -116,12 +116,12 @@
 
 
 % the beta family
-\class["{\beta_{2/2}}" {below=0.05em}, circlen=2](6,2)
+\class["{\beta_{2/2}}" {below=0.05em}](6,2)
 \class["\beta_2" {below=0.2em}](8,2)
 \class["\alpha_{2/2}^3" {below=0.2em}](9,3) \structline(8,2,-1)(9,3,-1)
-\class["{\beta_{4/4}}" {below=0.2em}, "4"](14,2)
+\class["{\beta_{4/4}}" {below=0.2em}](14,2)
 \class["\beta_3" {below right=0.2em}](14,2) \etaclass(15,3)
-\class["{\beta_{4/3}}" {below=0.2em}, circlen=3](16,2) \etaclass(17,3)
+\class["{\beta_{4/3}}" {below=0.2em}](16,2) \etaclass(17,3)
 \class["{\alpha_{2/2} \beta_3}" {below=0.2em}](17,3)
 
 
