fix weird Lecture/Lecture

--- a/sigma.tex
+++ b/sigma.tex
@@ -225,7 +225,7 @@ There is an equivalence \[\OS{kU}{2k} = BU[2k, \infty).\]
 Consider the element \(\beta^k \in kU_* = \Z[\beta]\).  The source of the induced map \(\beta^k\co \Susp^{2k} kU \to kU\) is \(2k\)--connective, and hence there is a factorization \[\Susp^{2k} kU \to kU[2k, \infty) \to kU.\]  Then, the structure of the homotopy ring \(kU_*\) shows that this is an equivalence: every class of degree at least \(2k\) can be uniquely written as a \(\beta^k\)--multiple.\footnote{Similarly, there is an equivalence \(\OS{kO}{8k} = BO[8k, \infty)\), and this \emph{does not hold} for indices which are not precise multiples of \(8\).}  Applying \(\Loops^\infty\) gives the desired statement: \[\OS{kU}{2k} = \Loops^\infty \Susp^{2k} kU \simeq \Loops^\infty kU[2k, \infty) = BU[2k, \infty). \qedhere\]
 \end{proof}
 
-The next space and Thom spectrum in the sequence are thus \(B\SU\) and \(M\SU\).  This case will be wholly amenable to analysis through methods we have developed in this Lecture, which is now our stated goal for the rest of this Lecture.  Our jumping off point for that story will be, again, a partial extension of the splitting principle.
+The next space and Thom spectrum in the sequence are thus \(B\SU\) and \(M\SU\).  These are approachable using methods we have developed so far, and so we set their description as our goal for the remainder of this Lecture.  Our jumping off point for that story will be, again, a partial extension of the splitting principle.
 \begin{lemma}\label{SplittingPrincipleForBSU}
 Let \(X\) be a finite complex, and let \(\tilde V\co X \to BU\) classify a virtual vector bundle of rank \(0\) over \(X\).  Suppose that there is a factorization \(\tilde{\tilde V}\co X \to B\SU\) of \(\tilde V\) through \(B\SU\).  Then, there is a space \(f\co Y \to X\), where \(f_E\co Y_E \to X_E\) is finite and flat, as well as a collection of line bundles \(\sheaf H_j\), \(\sheaf H'_j\) expressing a \(B\SU\)--internal decomposition\index{splitting principle!for BSU@for \(B\SU\)} \[\tilde{\tilde V} = -\bigoplus_{j=1}^n (1 - \sheaf H_j)(1 - \sheaf H'_j).\]
 \end{lemma}
