change uncomfortable "much of the way"

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -287,7 +287,7 @@ Second, we must produce an analogue of logarithmic differentiation, which is res
     The bottom logarithm is the identity, since the source is already additive.  If we evaluate these maps on a curve \(\gamma \in C_* \G\), we arrive at the equation~\cite[V.8.5]{LazardCFGs} \[\breve D_{\G} \circ \gamma = \breve D_{\G_a \otimes \Lie G} \circ \log_{\G} \circ \gamma = \frac{\mathrm d}{\mathrm dt} \left( (\log_\G \circ \gamma)(t) \right).\]  Hence, \(\breve D_{\G}\) plays the role of a logarithmic derivative.
 \end{enumerate}
 
-The conjecture, then, is that these pieces go much of the way towards describing a local residue pairing internal to the theory of formal groups, but there are still several details left to the enterprising reader, such as: should the de Rham complex be replaced?  Relatedly, can \(\breve D_{\G}\) or \(D_{\widehat{\mathbb H}}^{\widehat{\mathbb G}}\) be used to give a coordinate-free description of the deformation complex of \Cref{DeformationComplex}?  Where do \emph{primitives} in de Rham cohomology enter play?  How do the formulas for \(\sigma\) in terms of \(\breve D_{\G}\)~\cite[VII.6.14]{LazardCFGs} enter this story---presumably in demonstrating perfection?
+The conjecture, then, is that these pieces form the foundations of a local residue pairing internal to the theory of formal groups, which, appropriately interpreted, gives the duality paring between the covariant and contravariant geometric Dieudonn\'e modules. but there are still several details left to the enterprising reader, such as: should the de Rham complex be replaced?  Relatedly, can \(\breve D_{\G}\) or \(D_{\widehat{\mathbb H}}^{\widehat{\mathbb G}}\) be used to give a coordinate-free description of the deformation complex of \Cref{DeformationComplex}?  Where do \emph{primitives} in de Rham cohomology enter play?  How do the formulas for \(\sigma\) in terms of \(\breve D_{\G}\)~\cite[VII.6.14]{LazardCFGs} enter this story---presumably in demonstrating perfection?
 
 In a more topological direction, one wonders to what extent it is critical to use \(\HFp\) in the machinery built up in \Cref{LEFTCooperations}.  In particular, could \(\HFp\) be replaced by another field spectrum to build Morava \(K\)--theoretic analogues of Brown--Gitler spectra?  There is some existing work on this in the height \(1\) case, due to Bousfield~\cite{BousfieldLambdaRings}, but the matter remains ultimately unsettled.
 
