footnote about Loops SU(n)

--- a/quillen.tex
+++ b/quillen.tex
@@ -524,7 +524,7 @@ This says that the splitting principle is a topological enhancement of the claim
 The other constructions from \Cref{CurveDivisorsSection} are also easily matched up with topological counterparts:
 
 \begin{corollary}\label{ECohomBUIsFree}
-There are natural isomorphisms \(BU_E \cong \Div_0 \CP^\infty_E\) and \((BU \times \Z)_E \cong \Div \CP^\infty_E\). Additionally, \((BU \times \Z)_E\) is the free formal group on the curve \(\CP^\infty_E\). \qed
+There are natural isomorphisms \(BU_E \cong \Div_0 \CP^\infty_E\) and \((BU \times \Z)_E \cong \Div \CP^\infty_E\). Additionally, \((BU \times \Z)_E\) is the free formal group on the curve \(\CP^\infty_E\).\footnote{Similar methods to those of this section also show that the map \(\CP^{n-1}_E \to \Loops SU(n)_E\) presents \(\Loops SU(n)_E\) as the free formal group on \(\CP^{n-1}_E\).} \qed
 \end{corollary}
 
 \begin{figure}
