--- a/anss3.tex
+++ b/anss3.tex
@@ -51,7 +51,8 @@
 \betaclass(50,10)
 
 % tower off of beta_2
-\alphaclass(29,3)
+\class["\gamma_1"](29,3)
+\structline(29-3,3-1,-1)(29,3,-1)
 \betaclass(36,4)
 \alphaclass(39,5)
 \betaclass(46,6)
@@ -65,7 +66,7 @@
 \betaclass(54,6)
 
 % tower off of beta_3
-\class[circlen=2](45,3) \structline(42,2,-1)(45,3,-1)
+\class[circlen=2, "\frac{\alpha_{3/2} \beta_{3/3}}{3}" {below=0.2em, xshift=0.1cm}](45,3) \structline(42,2,-1)(45,3,-1)
 \betaclass(52,4)
 
 % d5s
